--- a/css/about-us.css
+++ b/css/about-us.css
@@ -60,7 +60,7 @@ body {
 	align-items: center;
 }
 
-.special-heading {
+.aboout-us-special-heading {
 	color: #ebeced;
 	font-size: 100px;
 	text-align: center;
@@ -69,7 +69,7 @@ body {
 	margin: 0;
 }
 
-.special-heading + p {
+.aboout-us-special-heading + p {
 	margin: -40px 0 0;
 	font-size: 22px;
 	text-align: center;
@@ -77,10 +77,10 @@ body {
 }
 
 @media (max-width: 767px) {
-	.special-heading {
+	.aboout-us-special-heading {
 		font-size: 60px;
 	}
-	.special-heading + p {
+	.aboout-us-special-heading + p {
 		margin-top: -30px;
 		font-size: 18px;
 	}
