--- a/css/advice.css
+++ b/css/advice.css
@@ -4,6 +4,7 @@
 	--secondary-color: #2c4755;
 	--section-padding: 60px;
 	--section-background: #f6f6f6;
+	--main-transition: 0.2s;
 }
 
 /* start global rules  */
@@ -60,8 +61,8 @@ body {
 	align-items: center;
 }
 
-.special-heading {
-	color: #ebeced;
+.advices-special-heading {
+	color: #d2d2d2;
 	font-size: 100px;
 	text-align: center;
 	font-weight: 800;
@@ -70,7 +71,7 @@ body {
     
 }
 
-.special-heading + p {
+.advices-special-heading + p {
 	margin: -40px 0 0;
 	font-size: 22px;
 	text-align: center;
@@ -81,10 +82,10 @@ body {
 }
 
 @media (max-width: 767px) {
-	.special-heading {
+	.advices-special-heading {
 		font-size: 60px;
 	}
-	.special-heading + p {
+	.advices-special-heading + p {
 		margin-top: -30px;
 		font-size: 18px;
 	}
@@ -96,7 +97,7 @@ body {
 
 /*  advice-page start  */
 
-.advice {
+/* .advice {
 	padding-top: var(--section-padding);
 	padding-bottom: var(--section-padding);
 	background-color: var(--section-background);
@@ -107,15 +108,17 @@ body {
 	grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
 	gap: 30px;
 	margin-top: 80px;
+	background-color: #d2d2d2;
+
 }
 
 .advice .advice-content.card {
-	background-color: #777;
 }
 
 .advice .advice-content .card:hover {
     cursor: pointer;
     transform: scale(1.03);
+	background-color: white;
     }
 
 .advice .advice-content.card:hover h3 {
@@ -138,6 +141,59 @@ body {
 	color: #777;
 	line-height: 1.3;
 	margin-bottom: 0;
-}
+} */
 
 /*  advice page end  */
+
+
+.advice {
+	padding-top: var(--section-padding);
+	padding-bottom: var(--section-padding);
+	background-color: var(--section-background);
+}
+
+.advice .advice-content {
+	display: grid;
+	grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+	gap: 30px;
+	margin-top: 80px;
+}
+
+.advice .advice-content .card {
+	background-color: white;
+	border-radius: 15px;
+}
+
+.advice .advice-content .card:hover {
+    cursor: pointer;
+    transform: scale(1.03);
+	transition: var(--main-transition);
+    }
+
+.advice .advice-content .card:hover h3 {
+    text-decoration: underline;
+    }
+
+.advice .advice-content .card img {
+	max-width: 100%;
+	height: 200px;
+	padding: 15px;
+	border-radius: 35px;
+}
+
+.advice .advice-content .card .info {
+	padding: 20px;
+	margin-bottom: auto ;
+}
+
+.advice .advice-content .card .info h3 {
+	margin: 0;
+}
+
+.advice .advice-content .card .info p {
+	color: #777;
+	line-height: 1.3;
+	margin-bottom: 0;
+}
+
+
