--- a/css/change.css
+++ b/css/change.css
@@ -1,79 +1,91 @@
 body {
     background-image: url("../imgs/register.jpg");
-    background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
+    background-position: center;
+    margin: 0;
+    height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
+    font-family: 'Cairo', sans-serif;
 }
 
 .wrapper {
-    width: 570px;
-    height: 610px;
-    border: 2px solid rgba(241, 233, 233, 0.944);
-    border-radius: 10px;
-    backdrop-filter: blur(2px);
-    box-shadow: 0 0 10px rgba(0, 0, 0, .5);
-    margin-top: 55px;
+    width: 600px;
+    height: 500px;
+    border-radius: 15px;
+    background: rgba(255, 255, 255, 0.2);
+    box-shadow: 0 8px 30px rgba(0, 0, 0, 0.2);
+    padding: 40px;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-}
-
-.wrapper.form-box {
-    width: 100%;
-    padding: 40px;
+    
 }
 
 .form-box h2 {
-    font-size: 50px;
+    font-size: 40px;
     color: rgb(36, 77, 108);
     text-align: center;
-    margin-bottom: 70px;
-}
-
-.input-box {
-    width: 100;
-    height: 50px;
-    border-bottom: 3px solid rgb(68, 102, 128);
-    color: rgb(8, 27, 41);
-    margin: 30px 0;
-}
-
-.input-box label {
-    top: 50%;
-    left: 15px;
-    transform: translateY(-50%);
-    color: rgb(36, 77, 108);
-    font-size: 20px;
+    margin-bottom: 60px;
     font-weight: 700;
 }
 
-.input-box input {
-    width: 300px;
-    height: 30px;
-    background: transparent;
-    border: none;
-    outline: none;
-    font-weight: 500;
-    font-size: 18px;
-    color: rgb(36, 77, 108);
+.input-box {
+    width: 100%;
+    margin: 15px 0;
+    position: relative;
 }
 
-.btn {
-    width: 325px;
-    height: 47px;
-    font-size: 30px;
+.input-box label {
+    position: absolute;
+    top: -30px; /* Adjusted to sit above the input field */
+    padding: 0 5px;
     color: rgb(36, 77, 108);
-    background: white;
+    font-size: 14px;
+    font-weight: 600;
+    pointer-events: none;
+    font-size: 18px;
+    margin-bottom: 15px;
+}
+
+.input-box input {
+    width: 100%;
+    height: 45px;
+    background: transparent;
+    border: 2px solid rgb(68, 102, 128);
+    outline: none;
+    border-radius: 8px;
+    padding-left: 15px; /* Padding for input text */
+    font-size: 16px;
+    font-weight: 500;
+    color: rgb(36, 77, 108);
+    margin-bottom: 28px;
+
+}
+
+.input-box input:focus {
+    border-color: rgb(36, 77, 108);
+    background: rgba(255, 255, 255, 0.3);
+}
+
+
+.btn {
+    width: 100%;
+    height: 50px;
+    font-size: 18px;
+    color: rgb(36, 77, 108);
+    background: rgba(255, 255, 255, 0.8);
     outline: none;
     text-align: center;
     border-radius: 35px;
     cursor: pointer;
-    margin: auto;
-    display: block;
+    margin-top: 15px;
     border: none;
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+    transition: all 0.3s ease;
 }
 
 .btn:hover {
