--- a/css/register.css
+++ b/css/register.css
@@ -1,82 +1,102 @@
-body{
-    background-image:url("../imgs/register.jpg");
-    background-attachment:fixed;
+@import url('https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap');
+
+body {
+    background-image: url("../imgs/register.jpg"); /* Replace with your image path */
+    background-attachment: fixed;
     background-size: cover;
+    background-position: center;
+    margin: 0;
+    height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
+    font-family: 'Cairo', sans-serif;
 }
-.wrapper{
-    width: 800px;
-    height: 600px;
-    border: 2px solid rgba(241, 233, 233, 0.944);
-    border-radius: 10px;
-    backdrop-filter: blur(2px);
-    box-shadow: 0 0 10px rgba(0,0,0,.5);
-    margin-top: 100px;
+
+.wrapper {
+    width: 600px;
+    height: fit-content;
+    border-radius: 15px;
+    box-shadow: 0 8px 30px rgba(0, 0, 0, 0.2);
+    padding: 40px;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
-.wrapper.form-box{
-    width: 200px;
-    padding: 100px;
-}
- .form-box h2{
-    font-size: 50px;
-    color:rgb(36, 77, 108);
+
+.form-box h2 {
+    font-size: 40px;
+    color: rgb(36, 77, 108);
     text-align: center;
-    margin-bottom:50px;
-    margin-top: -240px;
-    padding:0px 0 -150px;
-    text-align: center;
+    margin-bottom: 20px;
+    font-weight: 700;
 }
-.input-box{
-    width: 100;
-    height: 50px;
-    border-bottom: 3px solid rgb(68, 102, 128) ;
-    color: rgb(8, 27, 41);
-    margin: 30px 0;
-}
-.input-box label{
-   left: 15px;
-   transform: translateY(-50%);
-   color:rgb(36,77, 108) ;
-   font-size: 25px;
-   font-weight: 700;
-}
-.input-box input{
-    width: 220px;
-    height: 20px;
+
+
+.input-box input {
+    width: 100%;
+    height: 45px;
     background: transparent;
-    border:none;
-    outline: none; 
+    border: 2px solid rgb(68, 102, 128);
+    outline: none;
+    border-radius: 8px;
+    padding-left: 15px; /* Padding for input text */
+    font-size: 16px;
     font-weight: 500;
-    font-size: 18px ;
-    color:rgb(36,77, 108);
+    color: rgb(36, 77, 108);
+    margin-bottom: 16px;
+
+}
+
+.input-box label{
+    left: 15px;
+    transform: translateY(-50%);
+    color:rgb(36,77, 108) ;
+    font-size: 20px;
+    font-weight: 700;
+ }
+
+.input-box input:focus {
+    border-color: rgb(36, 77, 108);
+    background: rgba(255, 255, 255, 0.3);
+}
+
+.gender-selection {
+    width: 100%;
+    position: relative;
+}
+
+
+.gender-selection select {
+    width: 100%;
+    height: 45px;
+    border-radius: 35px;
+    color: rgb(36, 77, 108);
+    background: rgba(255, 255, 255, 0.8); 
+    border: none;
+    font-size: 17px;
+    margin-bottom: 65px;
     
 }
-.button{
-    width: 325px;
-    height: 47px;
-    font-size: 30px;
-    color:rgb(36,77, 108);
-    background:white;
+
+#submitButton {
+    width: 100%;
+    height: 50px;
+    font-size: 18px;
+    color: rgb(36, 77, 108);
+    background: rgba(255, 255, 255, 0.8);
     outline: none;
     text-align: center;
     border-radius: 35px;
     cursor: pointer;
-    margin: auto ;
-    display: block;
+    margin-top: 15px;
     border: none;
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+    transition: all 0.3s ease;
 }
-.button:hover{
-    background-color:rgb(59, 103, 136);
+
+#submitButton:hover {
+    background-color: rgb(59, 103, 136);
     color: white;
-}
-.gender-selection{
-    display: block;
-    border-radius: 60px;
-
-
 }
