--- a/css/style.css
+++ b/css/style.css
@@ -222,7 +222,7 @@ header nav .form i {
 
 .landing {
 	min-height: 100vh;
-	background-image: url("imgs/Landing.jpg");
+	background-image: url("../imgs/Landing.jpg");
 	background-size: cover;
 	position: relative;
 }
